Go ahead and return an object when doing getComputedStyle on renderer-less elements. It wouldn't return anything other than "undefined" in response to any queries, but that's enough for some websites, apparently.

BUG:119327

svn path=/branches/KDE/3.5/kdelibs/; revision=501090